# django-for-beginners

./: README.md  db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  models.py  views.py
accounts/migrations/: 0001_initial.py
blogs/: models.py  tests.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_rename_post_blogpost.py
blogs/templates/: blogs_base.html  blogs_home.html  post_delete.html  post_detail.html  post_edit.html  post_new.html
blogs/templates/registration/: login.html  signup.html
django_beginners/: asgi.py  settings.py  urls.py  wsgi.py
pages/: tests.py  views.py
pages/templates/: about.html
posts/: tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/templates/: posts_home.html
