[tool.poetry]
name = "django-tut"
version = "0.1.0"
description = ""
authors = ["sandeshit <thapasandesh56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
whitenoise = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
